# grpc-demo

./: Makefile  README.md
go_demo/: README.md  go.mod
go_demo/client/: main.go
go_demo/pb/: demo_grpc.pb.go
go_demo/server/: main.go
grpc_go/: demo.proto  go.mod  go.sum
grpc_go/client/: main.go
grpc_go/pb/: demo.pb.go
grpc_go/server/: main.go
grpc_python/: client.py  pyproject.toml  server.py
protobuffs/: demo.proto
python_demo/: README.md  pyproject.toml
python_demo/pb/: demo_pb2.py  demo_pb2_grpc.py
